[package]
name = "dungeon-crawler"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8.7"
legion = "=0.3.1"
rand = { version = "0.8.5", features = [] }
serde = { version = "=1.0.115", features = ["derive"] }
ron = "=0.6.1"

[profile.release]
lto = "thin"
